--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,28 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme{
+  --animate-shineRTL: shineRTL 0.7s forwards;
+  --animate-shineLTR: shineLTR 0.7s forwards;
+  --animate-float: float 2s infinite;
+  
+  @keyframes shineRTL {
+    0% {transform: translateX(0%);}
+    100% {transform: translateX(-200%);}
+  }
+
+  @keyframes shineLTR {
+    0% {transform: translateX(-200%);}
+    100% {transform: translateX(0%);}
+  }
+  
+  @keyframes float {
+    0%,
+    100% {transform: translateY(-15%);}
+    50% {transform: translateY(15%);}
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -120,3 +142,29 @@
     @apply bg-background text-foreground;
   }
 }
+/*@import "tailwindcss";
+
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+}
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
+}*/
